--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ anyio==4.8.0
 asgiref==3.8.1
 cachetools==5.5.2
 certifi==2025.1.31
+channels==4.2.0
 charset-normalizer==3.4.1
+click==8.1.8
 Django==4.2.19
 django-cors-headers==4.7.0
 djangorestframework==3.15.2
@@ -34,3 +36,4 @@ sqlparse==0.5.3
 typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.3.0
+uvicorn==0.34.0
