--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.8.1
 cachetools==5.5.2
 certifi==2025.1.31
 channels==4.2.0
+channels-redis==4.2.0
 charset-normalizer==3.4.1
 click==8.1.8
 Django==4.2.19
